--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
     <application
         android:allowBackup="true"
         android:fullBackupContent="false"
-        android:icon="@drawable/logonew"
+        android:icon="@drawable/icon_alarees"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logonew"
+        android:roundIcon="@drawable/icon_alarees"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.TailorUserApp"
